methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:5: error: type mismatch;
 found   : Unit
 required: Boolean
    while (isOverBaggle()==false){
    ^